src/voyverse/loggs
2026-06-17 19:23:54 | INFO     | ETL | Processing data in parallel | total_records=1044 | chunk_size=100 | total_chunks=11
2026-06-17 19:23:54 | INFO     | ETL | Completed parallel processing | total_chunks=11
2026-06-17 19:23:54 | ERROR    | Main | An error occurred during the ETL process
neo4j.exceptions.GqlError: {gql_status: 42I06} {gql_status_description: error: syntax error or access rule violation - invalid input. Invalid input '{', expected: a node label/relationship type name, '$', '%' or '('.} {message: 42I06: Invalid input '{', expected: a node label/relationship type name, '$', '%' or '('.} {diagnostic_record: {'_classification': 'CLIENT_ERROR', '_position': {'column': 18, 'line': 4, 'offset': 56}, 'OPERATION': '', 'OPERATION_CODE': '0', 'CURRENT_SCHEMA': '/'}} {raw_classification: CLIENT_ERROR}

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/home/aymen/Desktop/my_work/voyverse/src/voyverse/main.py", line 18, in main
    pipeline.run()
  File "/home/aymen/Desktop/my_work/voyverse/src/voyverse/ingest/etl.py", line 78, in run
    self.load(entities, relations)
  File "/home/aymen/Desktop/my_work/voyverse/src/voyverse/ingest/etl.py", line 71, in load
    jobs_node = self.connection.execute_batch(node_cypher_template, entities_dict)
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/aymen/Desktop/my_work/voyverse/src/voyverse/internals/database.py", line 50, in execute_batch
    session.execute_write(_batch_work)
  File "/home/aymen/Desktop/my_work/voyverse/.venv/lib/python3.11/site-packages/neo4j/_sync/work/session.py", line 754, in execute_write
    return self._run_transaction(
           ^^^^^^^^^^^^^^^^^^^^^^
  File "/home/aymen/Desktop/my_work/voyverse/.venv/lib/python3.11/site-packages/neo4j/_sync/work/session.py", line 577, in _run_transaction
    result = transaction_function(tx, *args, **kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/aymen/Desktop/my_work/voyverse/src/voyverse/internals/database.py", line 45, in _batch_work
    result = tx.run(wrapped_query, {"batch": batch_data})
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/aymen/Desktop/my_work/voyverse/.venv/lib/python3.11/site-packages/neo4j/_sync/work/transaction.py", line 201, in run
    result._tx_ready_run(query, parameters)
  File "/home/aymen/Desktop/my_work/voyverse/.venv/lib/python3.11/site-packages/neo4j/_sync/work/result.py", line 180, in _tx_ready_run
    self._run(query, parameters, None, None, None, None, None, None)
  File "/home/aymen/Desktop/my_work/voyverse/.venv/lib/python3.11/site-packages/neo4j/_sync/work/result.py", line 240, in _run
    self._attach()
  File "/home/aymen/Desktop/my_work/voyverse/.venv/lib/python3.11/site-packages/neo4j/_sync/work/result.py", line 441, in _attach
    self._connection.fetch_message()
  File "/home/aymen/Desktop/my_work/voyverse/.venv/lib/python3.11/site-packages/neo4j/_sync/io/_common.py", line 193, in inner
    func(*args, **kwargs)
  File "/home/aymen/Desktop/my_work/voyverse/.venv/lib/python3.11/site-packages/neo4j/_sync/io/_bolt.py", line 868, in fetch_message
    res = self._process_message(tag, fields)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/aymen/Desktop/my_work/voyverse/.venv/lib/python3.11/site-packages/neo4j/_sync/io/_bolt6.py", line 548, in _process_message
    response.on_failure(summary_metadata or {})
  File "/home/aymen/Desktop/my_work/voyverse/.venv/lib/python3.11/site-packages/neo4j/_sync/io/_common.py", line 263, in on_failure
    raise self._hydrate_error(metadata)
neo4j.exceptions.CypherSyntaxError: {neo4j_code: Neo.ClientError.Statement.SyntaxError} {message: Invalid input '{': expected a node label/relationship type name, '$', '%' or '(' (line 4, column 18 (offset: 56))
"        MERGE (n:{$type} {id: $id})"
                  ^} {gql_status: 42001} {gql_status_description: error: syntax error or access rule violation - invalid syntax}
2026-06-17 19:23:54 | INFO     | Main | Neo4j connection closed
